src/App.css
html {
  scroll-snap-type: y mandatory;
  scroll-behavior: smooth;
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}
section {
  height: 100vh;
  scroll-snap-align: center;
}

body {
  color: var(--text-color);
  font-family: var(--main-font);
  background-color: var(--main-background-color);
}
.container {
  width: 70%;
  margin: auto;
}

/* Media Query for Mobile */
@media (max-width: 480px) {
  .container {
    width: 90%;
  }
  section {
    height: max-content;
    scroll-snap-align: unset;
  }
}
/* Media Query for Tablets, Ipads */
@media (min-width: 481px) and (max-width: 1024px) {
  section {
    height: max-content;
    scroll-snap-align: unset;
  }
}

